Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129235

Qt WebEngine build failed with macOS SDK 15.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • None
    • 6.7.2
    • WebEngine
    • None
    • macOS
    • 8c5cf527c (118-based)

    Description

      [2024-09-23T14:56:21.987Z] FAILED: obj/third_party/webrtc/modules/desktop_capture/desktop_capture_objc/screen_capturer_mac.o 
      [2024-09-23T14:56:21.987Z] ../../../../../../../../../../../Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -MMD -MF obj/third_party/webrtc/modules/desktop_capture/desktop_capture_objc/screen_capturer_mac.o.d -DOFFICIAL_BUILD -DTOOLKIT_QT -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -DCR_XCODE_VERSION=1600 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DWEBRTC_ENABLE_PROTOBUF=1 -DWEBRTC_STRICT_FIELD_TRIALS=0 -DRTC_ENABLE_VP9 -DRTC_DAV1D_IN_INTERNAL_DECODER_FACTORY -DWEBRTC_HAVE_SCTP -DENABLE_EXTERNAL_AUTH -DWEBRTC_USE_H264 -DHAVE_WEBRTC_VIDEO -DLOGGING_INSIDE_WEBRTC -DWEBRTC_LIBRARY_IMPL -DWEBRTC_ENABLE_AVX2 -DWEBRTC_NON_STATIC_TRACE_EVENT_HANDLERS=0 -DWEBRTC_CHROMIUM_BUILD -DWEBRTC_POSIX -DWEBRTC_MAC -DABSL_ALLOCATOR_NOTHROW=1 -DLIBYUV_DISABLE_NEON -Igen -I../../../3rdparty/chromium -I../../../3rdparty/chromium/third_party/webrtc_overrides -I../../../3rdparty/chromium/third_party/webrtc -Igen/third_party/webrtc -I../../../3rdparty/chromium/third_party/abseil-cpp -I../../../3rdparty/chromium/third_party/perfetto/include -Igen/third_party/perfetto/build_config -Igen/third_party/perfetto -I../../../3rdparty/chromium/third_party/libyuv/include -I../../../3rdparty/chromium/third_party/webrtc/sdk/objc -I../../../3rdparty/chromium/third_party/webrtc/sdk/objc/base  -Wall -Wextra -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Wimplicit-fallthrough -Wthread-safety -Wunguarded-availability -Wno-missing-field-initializers -Wno-unused-parameter -Wno-psabi -Wloop-analysis -Wno-unneeded-internal-declaration -Wno-deprecated-declarations -Wenum-compare-conditional -Wno-ignored-pragma-optimize -Wno-deprecated-builtins -Wno-bitfield-constant-conversion -Wno-deprecated-this-capture -Wshadow -fno-delete-null-pointer-checks -fno-ident -fno-strict-aliasing -fstack-protector -Wno-unknown-argument -Wno-unknown-attributes -Wno-unknown-warning-option -Wno-ignored-attributes -Wno-predefined-identifier-outside-function -Wno-self-assign -Wno-unknown-pragmas -fcolor-diagnostics -fmerge-all-constants -arch x86_64 -O2 -fno-omit-frame-pointer -gdwarf-4 -g1 -gdwarf-aranges -isysroot ../../../../../../../../../../../Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX15.0.sdk -mmacos-version-min=11.0 -fvisibility=hidden -Wheader-hygiene -Wstring-conversion -Wtautological-overlap-compare -Wexit-time-destructors -Wglobal-constructors -Wno-shadow -Wctad-maybe-unsupported -Wimplicit-retain-self -Wstrict-overflow -Wmissing-field-initializers -Wimplicit-retain-self -Wobjc-missing-property-synthesis -Wno-parentheses-equality -Wno-tautological-compare -Wno-thread-safety-attributes -Wno-undefined-bool-conversion -Wno-tautological-undefined-compare -std=c++20 -Wno-trigraphs -fobjc-call-cxx-cdtors -fno-exceptions -fno-rtti -fobjc-arc -fno-objc-arc-exceptions -fvisibility-inlines-hidden -c ../../../3rdparty/chromium/third_party/webrtc/modules/desktop_capture/mac/screen_capturer_mac.mm -o obj/third_party/webrtc/modules/desktop_capture/desktop_capture_objc/screen_capturer_mac.o
      [2024-09-23T14:56:21.987Z] ../../../3rdparty/chromium/third_party/webrtc/modules/desktop_capture/mac/screen_capturer_mac.mm:35:9: error: expected function body after function declarator
      [2024-09-23T14:56:21.987Z]    35 |         CG_AVAILABLE_BUT_DEPRECATED(
      [2024-09-23T14:56:21.987Z]       |         ^
      [2024-09-23T14:56:21.987Z] 1 error generated.
      

      Attachments

        For Gerrit Dashboard: QTBUG-129235
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            studiosus Vladimir Belyavsky
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes