Fix build with macOS 15 SDK

The macOS 15 SDK removes CG_AVAILABLE_BUT_DEPRECATED. This was fixed in upstream Chromium by reverting the patch that added these checks.
WebEngine however needs to also stay compatible to older SDKs, so we check if CG_AVAILABLE_BUT_DEPRECATED is defined and define a dummy if it is not.

Fixes: QTBUG-129235
Change-Id: I235b13a1141ab81374198fb2505dc23e5723f77a
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/593365
Reviewed-by: Anu Aliyas <anu.aliyas@qt.io>